@@ -83,6 +83,11 @@ public:
 	static QString noteName(int note);
 	static QString completeNoteName(int note);
 
+	static void updateNoteNames();
+
+	// Update visual configuration.
+	void updateConfig();
+
 public slots:
 
 	// Preset file I/O.
